--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
   --white-color: #fff;
   --white-social: whitesmoke;
   --copy-color: rgb(102, 102, 102);
+  --radio-red: rgb(160, 35, 35);
 }
 
 body {
