--- a/src/components/television/VideoButtons/VideoButtons.module.css
+++ b/src/components/television/VideoButtons/VideoButtons.module.css
@@ -15,3 +15,16 @@
     font-size: 14px;
     padding: 0 12px;
 }
+
+.videoContainer {
+    width: 100%;
+    height: auto;
+}
+
+.video {
+    object-fit: cover;
+    width: 100%;
+    max-height: 240px;
+    margin-top: 10px;
+    border-radius: 12px;
+}
