--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@
   --white-social: whitesmoke;
   --copy-color: rgb(102, 102, 102);
   --radio-red: rgb(160, 35, 35);
+  --tv-color: rgb(255, 153, 0);
 }
 
 body {
