--- a/src/components/television/AboutTV/CardInfo/CardInfo.module.css
+++ b/src/components/television/AboutTV/CardInfo/CardInfo.module.css
@@ -1,14 +1,24 @@
+.activeCard,
 .cardContainer {
   position: relative;
   overflow: hidden;
   border-radius: 20px;
   max-height: 100px;
+  width: 132px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
+.activeCard .imageWrapper::after,
 .cardContainer:hover .imageWrapper::after {
   background-color: transparent;
 }
 
+.activeCard .cardTitle,
 .cardContainer:hover .cardTitle {
   opacity: 0;
 }
@@ -49,4 +59,11 @@
 
 .imageCard {
   object-fit: cover;
+}
+
+@media screen and (min-width: 375px) {
+  .activeCard,
+  .cardContainer {
+    width: 160px;
+  }
 }
