--- a/src/components/header/BurgerBtn/BurgerBtn.module.css
+++ b/src/components/header/BurgerBtn/BurgerBtn.module.css
@@ -14,7 +14,7 @@
 .burger {
   width: 37px;
   height: 2px;
-  background-color: var(--primary-dark);
+  background-color: var(--tv-color);
   transition: all 400ms ease;
 }
 
@@ -28,7 +28,7 @@
   margin-right: auto;
   width: 37px;
   height: 2px;
-  background-color: var(--primary-dark);
+  background-color: var(--tv-color);
   transition: all 400ms ease;
 }
 
