--- a/src/components/header/MobileMenu/Menu/Menu.module.css
+++ b/src/components/header/MobileMenu/Menu/Menu.module.css
@@ -9,8 +9,8 @@
     align-items: center;
     position: absolute;
     right: 0;
-    border-left: 1px solid green;
-    border-top: 1px solid green;
+    border-left: 1px solid var(--tv-color);
+    border-top: 1px solid var(--tv-color);
     z-index: 998;
     margin: 0;
     padding-top: 20px;
