--- a/src/components/television/ButtonsYoutube/ButtonsYoutube.module.css
+++ b/src/components/television/ButtonsYoutube/ButtonsYoutube.module.css
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap: 4px;
 }
 
 .linkBtn {
@@ -34,11 +34,20 @@
     object-fit: cover;
   }
 
+  .cardContainerActive,
   .cardContainer {
     position: relative;
     overflow: hidden;
     border-radius: 20px;
     max-height: 100px;
+  }
+
+  .cardContainerActive .imageWrapper::after {
+    background-color: transparent;
+  }
+
+  .cardContainerActive .cardTitle {
+    opacity: 0;
   }
   
   .cardContainer:hover .imageWrapper::after {
@@ -61,4 +70,10 @@
     color: rgb(255, 255, 255);
     z-index: 100;
     transition: var(--hover-effect);
+  }
+
+  @media screen and (min-width: 375px) {
+    .linkBtn {
+      width: 160px;
+    }
   }
