--- a/src/components/header/MobileMenu/NavLink/NavLink.module.css
+++ b/src/components/header/MobileMenu/NavLink/NavLink.module.css
@@ -10,3 +10,15 @@
   height: 32px;
   fill: var(--tv-color);
 }
+
+@media screen and (min-width: 768px) {
+  .link {
+    max-width: 42px;
+    max-height: 42px;
+  }
+
+  .icon {
+    width: 42px;
+    height: 42px;
+  }
+}
