--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -13,3 +13,14 @@
   align-items: center;
   justify-content: space-between;
 }
+
+@media screen and (min-width: 768px) {
+  .header {
+    max-width: 1200px;
+  }
+
+  .container {
+    justify-content: flex-start;
+    column-gap: 20%;
+  }
+}
