--- a/src/components/header/MobileMenu/Menu/Menu.module.css
+++ b/src/components/header/MobileMenu/Menu/Menu.module.css
@@ -5,7 +5,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    row-gap: 20px;
+    row-gap: 24px;
     align-items: center;
     position: absolute;
     right: 0;
@@ -26,4 +26,15 @@
     border-radius: 50%;
     background: #f8f5f5;
     box-shadow: 8px 8px 16px #ebeaea, -8px -8px 16px #ffffff;
+}
+
+.active {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 50%;
+    border: 1px solid var(--tv-color);
 }
