--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,169 +12,171 @@
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 16px;
   line-height: 1.5;
   color: #333;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../../public/fonts/Montserrat-Bold.woff2') format('woff2'),
-      url('../../public/fonts/Montserrat-Bold.woff') format('woff');
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-Bold.woff2") format("woff2"),
+    url("../../public/fonts/Montserrat-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../../public/fonts/Montserrat-SemiBold.woff2') format('woff2'),
-      url('../../public/fonts/Montserrat-SemiBold.woff') format('woff');
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-SemiBold.woff2") format("woff2"),
+    url("../../public/fonts/Montserrat-SemiBold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../../public/fonts/Montserrat-LightItalic.woff2') format('woff2'),
-      url('../../public/fonts/Montserrat-LightItalic.woff') format('woff');
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-LightItalic.woff2") format("woff2"),
+    url("../../public/fonts/Montserrat-LightItalic.woff") format("woff");
   font-weight: 300;
   font-style: italic;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../../public/fonts/Montserrat-BlackItalic.woff2') format('woff2'),
-      url('../../public/fonts/Montserrat-BlackItalic.woff') format('woff');
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-BlackItalic.woff2") format("woff2"),
+    url("../../public/fonts/Montserrat-BlackItalic.woff") format("woff");
   font-weight: 900;
   font-style: italic;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../../public/fonts/Montserrat-Thin.woff2') format('woff2'),
-      url('../../public/fonts/Montserrat-Thin.woff') format('woff');
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-Thin.woff2") format("woff2"),
+    url("../../public/fonts/Montserrat-Thin.woff") format("woff");
   font-weight: 100;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../../public/fonts/Montserrat-BoldItalic.woff2') format('woff2'),
-      url('../../public/fonts/Montserrat-BoldItalic.woff') format('woff');
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-BoldItalic.woff2") format("woff2"),
+    url("../../public/fonts/Montserrat-BoldItalic.woff") format("woff");
   font-weight: bold;
   font-style: italic;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../../public/fonts/Montserrat-ExtraBold.woff2') format('woff2'),
-      url('../../public/fonts/Montserrat-ExtraBold.woff') format('woff');
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-ExtraBold.woff2") format("woff2"),
+    url("../../public/fonts/Montserrat-ExtraBold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../../public/fonts/Montserrat-Light.woff2') format('woff2'),
-      url('../../public/fonts/Montserrat-Light.woff') format('woff');
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-Light.woff2") format("woff2"),
+    url("../../public/fonts/Montserrat-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../../public/fonts/Montserrat-SemiBoldItalic.woff2') format('woff2'),
-      url('../../public/fonts/Montserrat-SemiBoldItalic.woff') format('woff');
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-SemiBoldItalic.woff2") format("woff2"),
+    url("../../public/fonts/Montserrat-SemiBoldItalic.woff") format("woff");
   font-weight: 600;
   font-style: italic;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../../public/fonts/Montserrat-Italic.woff2') format('woff2'),
-      url('../../public/fonts/Montserrat-Italic.woff') format('woff');
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-Italic.woff2") format("woff2"),
+    url("../../public/fonts/Montserrat-Italic.woff") format("woff");
   font-weight: normal;
   font-style: italic;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../../public/fonts/Montserrat-ExtraBoldItalic.woff2') format('woff2'),
-      url('../../public/fonts/Montserrat-ExtraBoldItalic.woff') format('woff');
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-ExtraBoldItalic.woff2")
+      format("woff2"),
+    url("../../public/fonts/Montserrat-ExtraBoldItalic.woff") format("woff");
   font-weight: bold;
   font-style: italic;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../../public/fonts/Montserrat-ExtraLightItalic.woff2') format('woff2'),
-      url('../../public/fonts/Montserrat-ExtraLightItalic.woff') format('woff');
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-ExtraLightItalic.woff2")
+      format("woff2"),
+    url("../../public/fonts/Montserrat-ExtraLightItalic.woff") format("woff");
   font-weight: 200;
   font-style: italic;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../../public/fonts/Montserrat-MediumItalic.woff2') format('woff2'),
-      url('../../public/fonts/Montserrat-MediumItalic.woff') format('woff');
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-MediumItalic.woff2") format("woff2"),
+    url("../../public/fonts/Montserrat-MediumItalic.woff") format("woff");
   font-weight: 500;
   font-style: italic;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../../public/fonts/Montserrat-Regular.woff2') format('woff2'),
-      url('../../public/fonts/Montserrat-Regular.woff') format('woff');
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-Regular.woff2") format("woff2"),
+    url("../../public/fonts/Montserrat-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../../public/fonts/Montserrat-Medium.woff2') format('woff2'),
-      url('../../public/fonts/Montserrat-Medium.woff') format('woff');
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-Medium.woff2") format("woff2"),
+    url("../../public/fonts/Montserrat-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../../public/fonts/Montserrat-ExtraLight.woff2') format('woff2'),
-      url('../../public/fonts/Montserrat-ExtraLight.woff') format('woff');
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-ExtraLight.woff2") format("woff2"),
+    url("../../public/fonts/Montserrat-ExtraLight.woff") format("woff");
   font-weight: 200;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../../public/fonts/Montserrat-ThinItalic.woff2') format('woff2'),
-      url('../../public/fonts/Montserrat-ThinItalic.woff') format('woff');
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-ThinItalic.woff2") format("woff2"),
+    url("../../public/fonts/Montserrat-ThinItalic.woff") format("woff");
   font-weight: 100;
   font-style: italic;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../../public/fonts/Montserrat-Black.woff2') format('woff2'),
-      url('../../public/fonts/Montserrat-Black.woff') format('woff');
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-Black.woff2") format("woff2"),
+    url("../../public/fonts/Montserrat-Black.woff") format("woff");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
@@ -221,6 +223,20 @@ button {
   height: 240px;
 }
 
-.swiper-button-prev, .swiper-button-next {
-  color: var(--radio-red)!important;
+.swiper-button-prev,
+.swiper-button-next {
+  color: var(--radio-red) !important;
+}
+
+.rhap_main-controls-button {
+  color: var(--radio-red) !important;
+  transform: scale(1.3);
+}
+
+.rhap_container {
+  box-shadow: 0 0 3px 0 var(--radio-red) !important;
+  border-radius: 20px;
+  -webkit-box-shadow: 0px 2px 25px 0px rgba(219, 48, 48, 1)!important;
+  -moz-box-shadow: 0px 2px 25px 0px rgba(219, 48, 48, 1)!important;
+  box-shadow: 0px 2px 25px 0px rgba(219, 48, 48, 1)!important;
 }
