--- a/src/components/header/NavMenu/NavMenu.module.css
+++ b/src/components/header/NavMenu/NavMenu.module.css
@@ -1,12 +1,34 @@
+/* NavMenu.module.css */
 .listMenu {
     display: flex;
     align-items: center;
     column-gap: 44px;
 }
 
+.activeItem,
 .listItem {
+    color: var(--tv-color);
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: var(--tv-color);
+    position: relative;
+}
+
+.activeItem::after,
+.listItem::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 2px;
+    background: var(--tv-color);
+    transition: width 0.3s ease-in-out;
+}
+
+.listItem::after {
+    width: 0;
+}
+
+.activeItem::after {
+    width: 100%;
 }
