--- a/src/components/radio/Descripcion/Descripcion.module.css
+++ b/src/components/radio/Descripcion/Descripcion.module.css
@@ -13,6 +13,10 @@
   max-height: 34px;
 }
 
+.accent {
+  color: var(--radio-red);
+}
+
 .box {
   display: flex;
   align-items: center;
@@ -21,7 +25,7 @@
 }
 
 .showMoreBtn {
-  color: #090909;
+  color: var(--radio-red);
   padding: 0.7em 1.7em;
   font-size: 18px;
   border-radius: 0.5em;
