--- a/src/components/television/AboutTV/Frequencias/Frequencias.module.css
+++ b/src/components/television/AboutTV/Frequencias/Frequencias.module.css
@@ -8,4 +8,9 @@
   padding: 4px;
   margin-top: 8px;
   font-size: 14px;
+  color: var(--radio-red);
+}
+
+.text strong {
+  color: var(--tv-color);
 }
