--- a/src/components/radio/Audio/RadioLoader/RadioLoader.module.css
+++ b/src/components/radio/Audio/RadioLoader/RadioLoader.module.css
@@ -8,6 +8,13 @@
 
 @media screen and (min-width: 375px) {
     .loaderContainer {
-        max-width: 270px;
+        max-width: 182.7px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .loaderContainer {
+        max-width: 360px;
+        padding-left: 20px;
     }
 }
