--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -240,3 +240,13 @@ button {
   -moz-box-shadow: 0px 2px 25px 0px rgba(219, 48, 48, 1)!important;
   box-shadow: 0px 2px 25px 0px rgba(219, 48, 48, 1)!important;
 }
+
+@media screen and (min-width: 768px) {
+  .rhap_main-controls-button {
+    transform: scale(1.9);
+  }
+
+  .rhap_container {
+    height: 100px;
+  }
+}
