--- a/src/components/footer/Copyright/Copyright.module.css
+++ b/src/components/footer/Copyright/Copyright.module.css
@@ -23,4 +23,26 @@
     color: var(--tv-color);
 }
 
+@media screen and (min-width: 768px) {
+  .text {
+    font-size: 16px;
+  }
 
+  .linksBox a {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
+    justify-content: center;
+    padding-top: 20px;
+  }
+
+  .text {
+    margin-top: 0;
+  }
+}
