--- a/src/components/footer/SocialMedia/SocialMedia.module.css
+++ b/src/components/footer/SocialMedia/SocialMedia.module.css
@@ -10,6 +10,7 @@
   font-size: 1.2rem;
   font-weight: 400;
   color: var(--white-social);
+  letter-spacing: 0.04em;
 }
 
 .socialList {
@@ -33,9 +34,36 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: var(--hover-effect);
 }
 
 .social {
   width: 24px;
   height: 24px;
+}
+
+@media screen and (min-width: 768px) {
+  .title {
+    font-size: 1.4rem;
+  }
+
+  .socialContainer {
+    width: 40px;
+    height: 40px;
+  }
+
+  .socialList {
+    column-gap: 24px;
+  }
+
+  .social {
+    width: 32px;
+    height: 32px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .socialContainer:hover {
+    box-shadow: 10px 10px 30px #b35d0b, -10px -10px 30px #f37d0f;
+  }
 }
