--- a/src/components/radio/Descripcion/Descripcion.module.css
+++ b/src/components/radio/Descripcion/Descripcion.module.css
@@ -1,3 +1,8 @@
+.container {
+  max-width: 375px;
+  margin: 0 auto;
+}
+
 .title {
   font-size: 1.5rem;
   font-weight: 600;
@@ -53,4 +58,37 @@
 
 .text {
   text-align: justify;
+}
+
+@media screen and (min-width: 768px){
+  .container {
+    max-width: 768px;
+  }
+
+  .title {
+    font-size: 2rem;
+  }
+
+  .iconYoutube {
+    width: 42px;
+    height: 42px;
+  }
+  
+  .link {
+    max-height: 42px;
+  }
+
+  .text {
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 1200px){
+  .container {
+    max-width: 410px;
+  }
+
+  .title {
+    margin: 1.1rem 0 0.5rem 0;
+  }
 }
