--- a/src/components/radio/Descripcion/MoreText/MoreText.module.css
+++ b/src/components/radio/Descripcion/MoreText/MoreText.module.css
@@ -3,3 +3,10 @@
     text-align: justify;
     cursor: pointer;
 }
+
+@media screen and (min-width: 768px){
+    .text {
+        font-size: 18px;
+    }
+    
+}
