--- a/src/components/radio/ImageHero/ImageHero.module.css
+++ b/src/components/radio/ImageHero/ImageHero.module.css
@@ -1,14 +1,24 @@
 .imageBox {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
 .imageBox img {
-    object-fit: contain;
-    width: 100%;
-    max-width: 230px;
-    height: auto;
-    object-fit: cover;
+  object-fit: contain;
+  width: 100%;
+  max-width: 230px;
+  height: auto;
+  object-fit: cover;
+}
+
+@media screen and (min-width: 768px) {
+  .imageBox {
+    margin-bottom: 0;
+  }
+
+    .imageBox img {
+        width: 300px;
+    }
 }
