--- a/src/components/television/AboutTV/AboutTV.module.css
+++ b/src/components/television/AboutTV/AboutTV.module.css
@@ -1,12 +1,30 @@
 .list {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    gap: 4px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
 }
 
 .listItem {
-    cursor: pointer;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .list {
+    max-width: 768px;
+    gap: 20px;
+  }
+
+  .title {
+    font-size: 24px;
+    letter-spacing: 0.02em;
+    text-align: center;
+    margin: 20px 0;
+  }
+
+  .title span {
+    color: var(--tv-color);
+  }
 }
