--- a/src/components/television/AboutTV/CardInfo/CardInfo.module.css
+++ b/src/components/television/AboutTV/CardInfo/CardInfo.module.css
@@ -67,3 +67,15 @@
     width: 160px;
   }
 }
+
+@media screen and (min-width: 768px){
+  .activeCard,
+  .cardContainer {
+    width: 350px;
+    max-height: 200px;
+  }
+
+  .cardTitle {
+    font-size: 24px;
+  }
+}
