--- a/src/components/television/ButtonsYoutube/ButtonsYoutube.module.css
+++ b/src/components/television/ButtonsYoutube/ButtonsYoutube.module.css
@@ -15,65 +15,86 @@
 }
 
 .imageWrapper {
-    position: relative;
-    display: inline-block;
+  position: relative;
+  display: inline-block;
+}
+
+.imageWrapper::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  transition: var(--hover-effect);
+}
+
+.imageCard {
+  object-fit: cover;
+}
+
+.cardContainerActive,
+.cardContainer {
+  position: relative;
+  overflow: hidden;
+  border-radius: 20px;
+  max-height: 100px;
+}
+
+.cardContainerActive .imageWrapper::after {
+  background-color: transparent;
+}
+
+.cardContainerActive .cardTitle {
+  opacity: 0;
+}
+
+.cardContainer:hover .imageWrapper::after {
+  background-color: transparent;
+}
+
+.cardContainer:hover .cardTitle {
+  opacity: 0;
+}
+
+.cardTitle {
+  opacity: 1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-transform: uppercase;
+  font-size: 12px;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  z-index: 100;
+  transition: var(--hover-effect);
+}
+
+@media screen and (min-width: 375px) {
+  .linkBtn {
+    width: 160px;
   }
-  
-  .imageWrapper::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.7);
-    transition: var(--hover-effect);
-  }
-  
-  .imageCard {
-    object-fit: cover;
+}
+
+@media screen and (min-width: 768px) {
+  .linkBtn {
+    width: 350px;
+    height: 200px;
+    font-size: 14px;
   }
 
   .cardContainerActive,
   .cardContainer {
-    position: relative;
-    overflow: hidden;
-    border-radius: 20px;
-    max-height: 100px;
+    max-height: 200px;
   }
 
-  .cardContainerActive .imageWrapper::after {
-    background-color: transparent;
+  .listLinks {
+    gap: 20px;
   }
 
-  .cardContainerActive .cardTitle {
-    opacity: 0;
-  }
-  
-  .cardContainer:hover .imageWrapper::after {
-    background-color: transparent;
-  }
-  
-  .cardContainer:hover .cardTitle {
-    opacity: 0;
-  }
-  
   .cardTitle {
-    opacity: 1;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-transform: uppercase;
-    font-size: 12px;
-    text-align: center;
-    color: rgb(255, 255, 255);
-    z-index: 100;
-    transition: var(--hover-effect);
+    font-size: 24px;
   }
-
-  @media screen and (min-width: 375px) {
-    .linkBtn {
-      width: 160px;
-    }
-  }
+}
