--- a/src/components/television/LastVideos/LastVideos.module.css
+++ b/src/components/television/LastVideos/LastVideos.module.css
@@ -10,3 +10,10 @@
   .title > span {
     color: var(--tv-color);
   }
+
+  @media screen and (min-width: 768px){
+    .title {
+      font-size: 24px;
+      margin: 20px 0;
+    }
+  }
