--- a/src/components/television/VideoButtons/VideoButtons.module.css
+++ b/src/components/television/VideoButtons/VideoButtons.module.css
@@ -28,6 +28,9 @@
     border-radius: 20px;
     font-size: 14px;
     padding: 0 12px;
+    -webkit-box-shadow: 0px 2px 8px 0px rgba(122, 83, 4, 1);
+    -moz-box-shadow: 0px 2px 8px 0px rgba(122, 83, 4, 1);
+    box-shadow: 0px 2px 8px 0px rgba(122, 83, 4, 1);
 }
 
 .videoContainer {
@@ -55,5 +58,25 @@
     
     .video {
         max-height: 240px;
+    }
+}
+
+@media screen and (min-width: 1200px){
+    .tv {
+        display: flex;
+        align-items: center;
+        column-gap: 16px;
+    }
+
+    .buttonsContainer {
+        width: 120px;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        row-gap: 20px;
+    }
+
+    .videoContainer {
+        width: 500px;
     }
 }
