--- a/src/app/tv/page.module.css
+++ b/src/app/tv/page.module.css
@@ -1,19 +1,25 @@
 .container {
-    width: 100%;
-    max-width: 375px;
-    padding: 0 15px;
-    margin: 0 auto;
+  width: 100%;
+  max-width: 375px;
+  padding: 0 15px;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 768px) {
-    .container {
-        max-width: 768px;
-    }
-   
-    .heroContainer {
-        display: flex;
-        flex-direction: row-reverse;
-        align-items: center;
-        justify-content: center;
-    }
+  .container {
+    max-width: 768px;
+  }
+
+  .heroContainer {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
 }
