--- a/src/components/television/AboutTV/CardInfo/CardInfo.module.css
+++ b/src/components/television/AboutTV/CardInfo/CardInfo.module.css
@@ -13,13 +13,18 @@
   justify-content: center;
 }
 
-.activeCard .imageWrapper::after,
-.cardContainer:hover .imageWrapper::after {
+.activeCard {
+  border: 2px solid var(--tv-color);
+  -webkit-box-shadow: 0px 2px 8px 0px rgba(122, 83, 4, 1);
+  -moz-box-shadow: 0px 2px 8px 0px rgba(122, 83, 4, 1);
+  box-shadow: 0px 2px 8px 0px rgba(122, 83, 4, 1);
+}
+
+.activeCard .imageWrapper::after {
   background-color: transparent;
 }
 
-.activeCard .cardTitle,
-.cardContainer:hover .cardTitle {
+.activeCard .cardTitle {
   opacity: 0;
 }
 
@@ -68,7 +73,7 @@
   }
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) {
   .activeCard,
   .cardContainer {
     width: 350px;
@@ -77,5 +82,21 @@
 
   .cardTitle {
     font-size: 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .activeCard,
+  .cardContainer {
+    width: 250px;
+    max-height: 150px;
+  }
+
+  .cardContainer:hover .imageWrapper::after {
+    background-color: transparent;
+  }
+
+  .cardContainer:hover .cardTitle {
+    opacity: 0;
   }
 }
