--- a/src/components/television/AboutTV/Frequencias/Frequencias.module.css
+++ b/src/components/television/AboutTV/Frequencias/Frequencias.module.css
@@ -14,3 +14,34 @@
 .text strong {
   color: var(--tv-color);
 }
+
+@media screen and (min-width: 768px){
+  .text {
+    font-size: 24px;
+    padding: 8px;
+  }
+}
+
+@media screen and (min-width: 1200px){
+  .container {
+    max-width: 1200px;
+    padding: 0 15px;
+  }
+
+  .list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 10px 20px;
+  }
+
+  .listItem {
+    width: 514px;
+    max-width: 514px;
+  }
+
+  .text {
+    font-size: 20px;
+  }
+}
