--- a/src/components/television/AboutTV/NuestrasValores/NuestrosValores.module.css
+++ b/src/components/television/AboutTV/NuestrasValores/NuestrosValores.module.css
@@ -23,3 +23,32 @@
 .accent {
   color: var(--tv-color);
 }
+
+@media screen and (min-width: 768px) {
+  .container h3 {
+    font-size: 24px;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .list {
+    align-items: flex-start;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .content {
+    flex-direction: row;
+    align-items: flex-start;
+    column-gap: 20px;
+  }
+
+  .list {
+    width: 52%;
+  }
+}
