--- a/src/components/television/AboutTV/QuienesSomos/QuienesSomos.module.css
+++ b/src/components/television/AboutTV/QuienesSomos/QuienesSomos.module.css
@@ -21,3 +21,22 @@
 .accent {
     color: var(--tv-color);
 }
+
+@media screen and (min-width: 768px) {
+    .container h3 {
+       font-size: 24px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+  .content {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    column-gap: 20px;
+  }
+    
+  .image {
+    max-width: 50%;
+  }
+}
