--- a/src/components/television/ButtonsYoutube/ButtonsYoutube.module.css
+++ b/src/components/television/ButtonsYoutube/ButtonsYoutube.module.css
@@ -12,6 +12,9 @@
   display: inline-block;
   font-size: 12px;
   text-transform: uppercase;
+  border: none;
+  outline: none;
+  background-color: transparent;
 }
 
 .imageWrapper {
@@ -40,6 +43,13 @@
   overflow: hidden;
   border-radius: 20px;
   max-height: 100px;
+}
+
+.cardContainerActive {
+  border: 2px solid var(--tv-color);
+  -webkit-box-shadow: 0px 2px 8px 0px rgba(122, 83, 4, 1);
+  -moz-box-shadow: 0px 2px 8px 0px rgba(122, 83, 4, 1);
+  box-shadow: 0px 2px 8px 0px rgba(122, 83, 4, 1);
 }
 
 .cardContainerActive .imageWrapper::after {
@@ -96,5 +106,17 @@
 
   .cardTitle {
     font-size: 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .linkBtn {
+    width: 250px;
+    height: 150px;
+  }
+
+  .cardContainerActive,
+  .cardContainer {
+    max-height: 150px;
   }
 }
