--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,3 +1,24 @@
-.section {
-    min-height: 100dvh;
+.container {
+  width: 100%;
+  max-width: 375px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
+
+  .content {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
 }
