--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -7,5 +7,18 @@
     padding: 0 15px;
     width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
+    row-gap: 8px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid var(--copy-color);
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        flex-direction: row;
+        justify-content: center;
+        column-gap: 60px;
+    }
+    
 }
