--- a/src/components/footer/SocialMedia/SocialMedia.module.css
+++ b/src/components/footer/SocialMedia/SocialMedia.module.css
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-bottom: 1px solid var(--copy-color);
 }
 
 .title {
@@ -45,6 +44,10 @@
 @media screen and (min-width: 768px) {
   .title {
     font-size: 1.4rem;
+  }
+
+  .socialList, .container {
+    max-width: 300px;
   }
 
   .socialContainer {
