--- a/src/app/about/page.module.css
+++ b/src/app/about/page.module.css
@@ -1,6 +1,32 @@
 .container {
-    width: 100%;
-    max-width: 375px;
-    margin: 0 auto;
-    padding: 0 15px;
+  width: 100%;
+  max-width: 375px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.title {
+  font-size: 20px;
+  text-align: center;
+  margin: 20px 0;
+}
+
+.title span {
+  color: var(--tv-color);
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+
+  .title {
+    font-size: 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
 }
