--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,8 @@
   --white-social: whitesmoke;
   --copy-color: rgb(102, 102, 102);
   --radio-red: rgb(160, 35, 35);
-  --tv-color: rgb(255, 153, 0);
+  --tv-color: rgb(59, 153, 71);
+  --television-color: rgb(255, 153, 0);
 }
 
 body {
