--- a/src/components/aboutPage/ListSocials/ListSocials.module.css
+++ b/src/components/aboutPage/ListSocials/ListSocials.module.css
@@ -4,3 +4,13 @@
     align-items: flex-start;
     row-gap: 16px;
 }
+
+@media screen and (min-width: 768px){
+    .list {
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        column-gap: 16px;
+    }
+}
