--- a/src/components/aboutPage/NuestrasYoutube/Canal/Canal.module.css
+++ b/src/components/aboutPage/NuestrasYoutube/Canal/Canal.module.css
@@ -1,6 +1,6 @@
 .icon {
-  width: 52px;
-  height: 52px;
+  width: 42px;
+  height: 42px;
 }
 
 .title {
@@ -20,7 +20,7 @@
   border-radius: 23px;
   background: linear-gradient(145deg, #dedede, #ffffff);
   box-shadow: 5px 5px 6px #dedede, -5px -5px 6px #ffffff;
-  border: 1px solid var(--tv-color);
+  border: 1px solid var(--radio-red);
   width: 100%;
   height: 80px;
   padding: 10px;
@@ -35,16 +35,10 @@
   text-align: left;
 }
 
-@media screen and (min-width: 375px) {
-  .description p {
-    font-size: 14px;
-  }
-}
-
 @media screen and (min-width: 768px) {
   .icon {
-    width: 82px;
-    height: 82px;
+    width: 52px;
+    height: 52px;
   }
 
   .description p,
@@ -52,21 +46,21 @@
     font-size: 14px;
   }
 
+  .cardinfo {
+    column-gap: 16px;
+  }
+
   .card {
     max-width: 350px;
     height: 120px;
-    padding: 20px;
-  }
-
-  .cardinfo {
-    column-gap: 24px;
+    column-gap: 16px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .card:hover {
-    -webkit-box-shadow: 0px 2px 11px 3px rgba(52, 138, 23, 1);
-    -moz-box-shadow: 0px 2px 11px 3px rgba(52, 138, 23, 1);
-    box-shadow: 0px 2px 11px 3px rgba(52, 138, 23, 1);
+    -webkit-box-shadow: 0px 6px 8px -1px rgb(180, 65, 50);
+    -moz-box-shadow: 0px 6px 8px -1px rgb(168, 62, 30);
+    box-shadow: 0px 6px 8px -1px rgb(192, 40, 40);
   }
 }
