--- a/src/components/header/NavMenu/LinkHeader/LinkHeader.module.css
+++ b/src/components/header/NavMenu/LinkHeader/LinkHeader.module.css
@@ -14,6 +14,6 @@
   }
 
   .link:hover {
-    box-shadow: -7px 7px 41px #ffae00, 7px -7px 41px #ff9900;
+    box-shadow: -7px 7px 41px #4b9e48, 7px -7px 41px #498a3c;
   }
 }
