--- a/src/components/homepage/hero/Hero.module.css
+++ b/src/components/homepage/hero/Hero.module.css
@@ -5,14 +5,18 @@
 
 .hero {
   position: relative;
-  background: linear-gradient(rgba(0, 0, 0, 0.611), rgba(0, 0, 0, 0.611)),
-    url("/images/homepage/background-hero.webp") no-repeat center center/cover;
+  background: linear-gradient(
+    0deg,
+    rgba(13, 68, 15, 1) 0%,
+    rgba(29, 171, 69, 1) 100%
+  );
   padding: 40px 20px;
   border-radius: 10px;
   -webkit-box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.75);
   border: 2px solid var(--tv-color);
+  animation: appearUp 1.2s ease;
 }
 
 .hero h1 {
@@ -26,7 +30,7 @@
 }
 
 .accent strong {
-  color: var(--tv-color);
+  color: var(--television-color);
 }
 
 @media screen and (min-width: 375px) {
@@ -54,7 +58,8 @@
 }
 
 @media screen and (max-width: 1199.98px) {
-  .imageRadio, .imageTV {
+  .imageRadio,
+  .imageTV {
     display: none;
   }
 }
@@ -85,11 +90,35 @@
   .imageTV {
     top: -14px;
     right: -223px;
+    animation: appearRight 1s ease;
   }
 
   .imageRadio {
     bottom: 0;
     right: -403px;
     z-index: 8;
+    animation: appearRight 1.8s ease;
+  }
+}
+
+@keyframes appearUp {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes appearRight {
+  0% {
+    opacity: 0;
+    transform: translateX(300px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
