--- a/src/components/radio/Descripcion/Descripcion.module.css
+++ b/src/components/radio/Descripcion/Descripcion.module.css
@@ -7,6 +7,7 @@
   font-size: 1.5rem;
   font-weight: 600;
   margin: 0.7rem 0 0.5rem 0;
+  animation: appearRight 1s ease;
 }
 
 .iconYoutube {
@@ -40,6 +41,7 @@
   transition: all 0.3s;
   box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
   font-weight: 600;
+  animation: appearDown 1.4s ease;
 }
 
 .showMoreBtn:active {
@@ -54,10 +56,12 @@
   color: rgb(161, 40, 40);
   font-size: 10px;
   font-weight: 600;
+  animation: appearDown 1.4s ease;
 }
 
 .text {
   text-align: justify;
+  animation: appearRight 1.8s ease;
 }
 
 @media screen and (min-width: 768px){
@@ -90,5 +94,27 @@
 
   .title {
     margin: 1.1rem 0 0.5rem 0;
+  }
+}
+
+@keyframes appearRight {
+  0% {
+      opacity: 0;
+      transform: translateX(200px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
+
+@keyframes appearDown {
+  0% {
+      opacity: 0;
+      transform: translateY(200px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
   }
 }
