--- a/src/components/radio/ImageHero/ImageHero.module.css
+++ b/src/components/radio/ImageHero/ImageHero.module.css
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
+  animation: appear 1.2s ease;
 }
 
 .imageBox img {
@@ -21,4 +22,15 @@
     .imageBox img {
         width: 300px;
     }
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
