--- a/src/components/radio/LastVideos/LastVideos.module.css
+++ b/src/components/radio/LastVideos/LastVideos.module.css
@@ -7,6 +7,7 @@
 .title {
   letter-spacing: 0.02em;
   margin-bottom: 8px;
+  animation: appearLeft 1.4s ease;
 }
 
 .title > span {
@@ -22,6 +23,7 @@
   color: var(--white-color);
   font-weight: 600;
   transition: var(--hover-effect);
+  animation: appearDown 1.4s ease;
 }
 
 .link:hover {
@@ -29,13 +31,9 @@
   color: var(--radio-red);
 }
 
-.swiper-button-prev,
-.swiper-button-next {
-  color: var(--radio-red);
-}
-
 .videoContainer {
   border-radius: 20px;
+  animation: appearDown 1.4s ease;
 }
 
 @media screen and (min-width: 768px) {
@@ -77,5 +75,27 @@
   .link:hover {
     background-color: var(--radio-red);
     color: var(--white-color);
+  }
+}
+
+@keyframes appearDown {
+  0% {
+      opacity: 0;
+      transform: translateY(200px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
+
+@keyframes appearLeft {
+  0% {
+      opacity: 0;
+      transform: translateX(-200px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
   }
 }
