--- a/src/components/television/AboutTV/AboutTV.module.css
+++ b/src/components/television/AboutTV/AboutTV.module.css
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: center;
   gap: 4px;
+  animation: appearDown 1.4s ease;
 }
 
 .listItem {
@@ -16,6 +17,7 @@
   letter-spacing: 0.02em;
   text-align: center;
   margin: 20px 0;
+  animation: appearLeft 1.4s ease;
 }
 
 .title span {
@@ -32,5 +34,27 @@
 @media screen and (min-width: 1200px) {
   .list {
     max-width: 1200px;
+  }
+}
+
+@keyframes appearLeft {
+  0% {
+      opacity: 0;
+      transform: translateX(-200px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
+
+@keyframes appearDown {
+  0% {
+      opacity: 0;
+      transform: translateY(200px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
   }
 }
