--- a/src/components/header/MobileMenu/Menu/Menu.module.css
+++ b/src/components/header/MobileMenu/Menu/Menu.module.css
@@ -14,6 +14,7 @@
     z-index: 998;
     margin: 0;
     padding-top: 20px;
+    animation: appearRight 1.4s ease;
 }
 
 .item {
@@ -37,4 +38,14 @@
     padding: 10px;
     border-radius: 50%;
     border: 1px solid var(--tv-color);
+}
+
+@keyframes appearRight {
+    0% {
+        transform: translateX(100px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+    
 }
