--- a/src/components/television/AboutTV/Frequencias/Frequencias.module.css
+++ b/src/components/television/AboutTV/Frequencias/Frequencias.module.css
@@ -9,6 +9,7 @@
   margin-top: 8px;
   font-size: 14px;
   color: var(--radio-red);
+  animation: appearDown 1.4s ease;
 }
 
 .text strong {
@@ -43,5 +44,16 @@
 
   .text {
     font-size: 20px;
+  }
+}
+
+@keyframes appearDown {
+  0% {
+    opacity: 0;
+    transform: translateY(200px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
