--- a/src/components/television/AboutTV/NuestrasValores/NuestrosValores.module.css
+++ b/src/components/television/AboutTV/NuestrasValores/NuestrosValores.module.css
@@ -6,6 +6,7 @@
 
 .container h3 {
   text-align: center;
+  animation: appearRight 1s ease;
 }
 
 .list {
@@ -13,11 +14,13 @@
   flex-direction: column;
   align-items: center;
   row-gap: 8px;
+  animation: appearDown 1.4s ease;
 }
 
 .image {
   max-width: 100%;
   height: auto;
+  animation: appear 1.4s ease;
 }
 
 .accent {
@@ -50,5 +53,38 @@
 
   .list {
     width: 52%;
+  }
+}
+
+@keyframes appearRight {
+  0% {
+    opacity: 0;
+    transform: translateX(200px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes appearDown {
+  0% {
+    opacity: 0;
+    transform: translateY(200px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
   }
 }
