--- a/src/components/television/AboutTV/PedidosOracion/PedidosOracion.module.css
+++ b/src/components/television/AboutTV/PedidosOracion/PedidosOracion.module.css
@@ -6,15 +6,18 @@
 .container h3 {
   text-align: center;
   margin-bottom: 12px;
+  animation: appearLeft 1.4s ease;
 }
 
 .container h4 {
   font-style: italic;
   margin: 20px 0;
+  animation: appearLeft 2.4s ease;
 }
 
 .container p {
   text-align: justify;
+  animation: appearDown 1.4s ease;
 }
 
 .link {
@@ -30,6 +33,7 @@
   max-width: 100%;
   height: auto;
   margin-bottom: 20px;
+  animation: appearDown 2.4s ease;
 }
 
 .accent {
@@ -56,5 +60,27 @@
 @media screen and (min-width: 1200px) {
   .content > div {
     width: 58%;
+  }
+}
+
+@keyframes appearLeft {
+  0% {
+      opacity: 0;
+      transform: translateX(-200px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
+
+@keyframes appearDown {
+  0% {
+      opacity: 0;
+      transform: translateY(200px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
   }
 }
