--- a/src/components/television/AboutTV/QuienesSomos/QuienesSomos.module.css
+++ b/src/components/television/AboutTV/QuienesSomos/QuienesSomos.module.css
@@ -5,17 +5,20 @@
 
 .container h3 {
     text-align: center;
+    animation: appearLeft 1s ease;
 }
 
 .container p {
     text-align: justify;
     margin-top: 8px;
+    animation: appearDown 1s ease;
 }
 
 .image {
     max-width: 100%;
     height: auto;
     margin: 20px 0;
+    animation: appearDown 1.4s ease;
 }
 
 .accent {
@@ -38,5 +41,27 @@
     
   .image {
     max-width: 50%;
+  }
+}
+
+@keyframes appearLeft {
+  0% {
+      opacity: 0;
+      transform: translateX(-200px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
+
+@keyframes appearDown {
+  0% {
+      opacity: 0;
+      transform: translateY(200px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
   }
 }
