--- a/src/components/television/ImageHero/ImageHero.module.css
+++ b/src/components/television/ImageHero/ImageHero.module.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  animation: appear 1.2s ease;
 }
 
 .imageBox img {
@@ -16,5 +17,16 @@
   .imageBox img {
     max-width: 460px;
     width: 460px;
+  }
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
   }
 }
