--- a/src/components/television/LastVideos/LastVideos.module.css
+++ b/src/components/television/LastVideos/LastVideos.module.css
@@ -5,6 +5,8 @@
 .title {
     letter-spacing: 0.02em;
     margin-bottom: 8px;
+    margin-top: 20px;
+    animation: appearRight 1.4s ease;
   }
   
   .title > span {
@@ -17,3 +19,15 @@
       margin: 20px 0;
     }
   }
+
+  @keyframes appearRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+    
+}
