--- a/src/components/television/VideoButtons/VideoButtons.module.css
+++ b/src/components/television/VideoButtons/VideoButtons.module.css
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    animation: appearLeft 1.4s ease;
 }
 
 .button {
@@ -36,6 +37,7 @@
 .videoContainer {
     width: 100%;
     height: auto;
+    animation: appearDown 1.4s ease;
 }
 
 .video {
@@ -79,4 +81,28 @@
     .videoContainer {
         width: 500px;
     }
+}
+
+@keyframes appearLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+    
+}
+
+@keyframes appearDown {
+    0% {
+        opacity: 0;
+        transform: translateY(200px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+    
 }
