--- a/src/components/aboutPage/ListSocials/ListSocials.module.css
+++ b/src/components/aboutPage/ListSocials/ListSocials.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: flex-start;
     row-gap: 16px;
+    animation: appearDown 1.4s ease;
 }
 
 @media screen and (min-width: 768px){
@@ -13,4 +14,16 @@
         flex-wrap: wrap;
         column-gap: 16px;
     }
+}
+
+@keyframes appearDown {
+    0% {
+        opacity: 0;
+        transform: translateY(200px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    
 }
