--- a/src/components/aboutPage/NuestrasYoutube/NuestrasYoutube.module.css
+++ b/src/components/aboutPage/NuestrasYoutube/NuestrasYoutube.module.css
@@ -5,6 +5,7 @@
 .title {
   font-size: 20px;
   text-align: center;
+  animation: appearRight 1.4s ease;
 }
 
 .title span {
@@ -16,6 +17,7 @@
   flex-direction: column;
   align-items: center;
   row-gap: 16px;
+  animation: appearDown 2.4s ease;
 }
 
 @media screen and (min-width: 768px) {
@@ -29,4 +31,28 @@
   .title {
     font-size: 24px;
   }
+}
+
+@keyframes appearRight {
+  0% {
+      opacity: 0;
+      transform: translateX(-200px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateX(0);
+  }
+  
+}
+
+@keyframes appearDown {
+  0% {
+      opacity: 0;
+      transform: translateY(200px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
+  }
+  
 }
