--- a/src/components/television/VideoButtons/VideoButtons.module.css
+++ b/src/components/television/VideoButtons/VideoButtons.module.css
@@ -1,94 +1,105 @@
 .buttonsContainer {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    animation: appearLeft 1.4s ease;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  animation: appearLeft 1.4s ease;
 }
 
 .button {
-    width: 118px;
-    border: none;
-    outline: none;
-    height: 44px;
-    background-color: var(--tv-color);
-    color: var(--white-color);
-    border-radius: 20px;
-    font-size: 14px;
-    padding: 0 12px;
+  width: 118px;
+  border: none;
+  outline: none;
+  height: 44px;
+  background-color: var(--tv-color);
+  color: var(--white-color);
+  border-radius: 20px;
+  font-size: 14px;
+  padding: 0 12px;
+  transition: var(--hover-effect);
 }
 
 .activeButton {
-    width: 118px;
-    border: none;
-    outline: none;
-    height: 42px;
-    background-color: var(--white-color);
-    color: var(--tv-color);
-    border: 1px solid var(--tv-color);
-    border-radius: 20px;
-    font-size: 14px;
-    padding: 0 12px;
-    -webkit-box-shadow: 0px 2px 8px 0px rgba(122, 83, 4, 1);
-    -moz-box-shadow: 0px 2px 8px 0px rgba(122, 83, 4, 1);
-    box-shadow: 0px 2px 8px 0px rgba(122, 83, 4, 1);
+  width: 118px;
+  border: none;
+  outline: none;
+  height: 42px;
+  background-color: var(--white-color);
+  color: var(--tv-color);
+  border: 1px solid var(--tv-color);
+  border-radius: 20px;
+  font-size: 14px;
+  padding: 0 12px;
+  -webkit-box-shadow: 0px 2px 8px 0px rgb(4, 122, 30);
+  -moz-box-shadow: 0px 2px 8px 0px rgb(4, 122, 30);
+  box-shadow: 0px 2px 8px 0px rgb(4, 122, 30);
+  transition: var(--hover-effect);
 }
 
 .videoContainer {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 .video {
-    object-fit: cover;
-    width: 100%;
-    max-height: 240px;
-    margin-top: 10px;
-    border-radius: 12px;
+  object-fit: cover;
+  width: 100%;
+  max-height: 240px;
+  margin-top: 10px;
+  border-radius: 12px;
 }
 
 @media screen and (min-width: 768px) {
-    .videoContainer {
-        width: 400px;
-        height: auto;
-    }
+  .videoContainer {
+    width: 400px;
+    height: auto;
+  }
 
-    .tv {
-        margin-top: 20px;
-    }
-    
-    .video {
-        max-height: 240px;
-    }
+  .tv {
+    margin-top: 20px;
+  }
+
+  .video {
+    max-height: 240px;
+  }
 }
 
-@media screen and (min-width: 1200px){
-    .tv {
-        display: flex;
-        align-items: center;
-        column-gap: 16px;
-    }
+@media screen and (min-width: 1200px) {
+  .tv {
+    display: flex;
+    align-items: center;
+    column-gap: 16px;
+  }
 
-    .buttonsContainer {
-        width: 120px;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        row-gap: 20px;
-    }
+  .buttonsContainer {
+    width: 120px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 20px;
+  }
 
-    .videoContainer {
-        width: 500px;
+  .videoContainer {
+    width: 500px;
+  }
+
+  .activeButton:hover,
+  .button:hover {
+    background-color: green;
+  }
+
+    .activeButton:hover {
+        color: var(--white-color);
     }
 }
 
 @keyframes appearLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(-100px);
-    }
-    100% {
-        opacity: 1;
-        transform: translateX(0);
-    }  
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
