--- a/src/components/aboutPage/SitiosWeb/SitiosWeb.module.css
+++ b/src/components/aboutPage/SitiosWeb/SitiosWeb.module.css
@@ -13,7 +13,7 @@
 .icon {
   width: 32px;
   height: 32px;
-  fill: var(--tv-color);
+  fill: var(--accent-color);
   transition: var(--hover-effect);
 }
 
@@ -37,7 +37,7 @@
   height: 100%;
   overflow: hidden;
   border-radius: 30px;
-  border: 1px solid var(--tv-color);
+  border: 1px solid var(--accent-color);
 }
 
 .photoWeb {
@@ -60,7 +60,7 @@
   justify-content: flex-start;
   column-gap: 8px;
   margin-top: 12px;
-  color: var(--tv-color);
+  color: var(--accent-color);
   text-decoration: underline;
 }
 
