--- a/src/components/aboutPage/socials/Socials.module.css
+++ b/src/components/aboutPage/socials/Socials.module.css
@@ -18,8 +18,8 @@
 
 .card {
   border-radius: 23px;
-  background: linear-gradient(145deg, #dedede, #ffffff);
-  box-shadow: 5px 5px 6px #dedede, -5px -5px 6px #ffffff;
+  background: var(--dark-blue);
+  box-shadow: 5px 5px 6px #2b8b92, -5px -5px 6px #3e8f8b;
   border: 1px solid var(--tv-color);
   width: 100%;
   height: 80px;
