--- a/src/components/header/MobileMenu/Menu/Menu.module.css
+++ b/src/components/header/MobileMenu/Menu/Menu.module.css
@@ -1,7 +1,7 @@
 .menu {
     width: 100%;
     max-width: 70px;
-    background-color: var(--white-color);
+    background-color: var(--primary-dark);
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -9,8 +9,6 @@
     align-items: center;
     position: absolute;
     right: 0;
-    border-left: 1px solid var(--tv-color);
-    border-top: 1px solid var(--tv-color);
     z-index: 998;
     margin: 0;
     padding-top: 20px;
@@ -25,8 +23,7 @@
     justify-content: center;
     padding: 10px;
     border-radius: 50%;
-    background: #f8f5f5;
-    box-shadow: 8px 8px 16px #ebeaea, -8px -8px 16px #ffffff;
+    background: var(--white-color);
 }
 
 .active {
@@ -37,7 +34,7 @@
     justify-content: center;
     padding: 10px;
     border-radius: 50%;
-    border: 1px solid var(--tv-color);
+    border: 1px solid var(--accent-color);
 }
 
 @keyframes appearRight {
