--- a/src/components/header/MobileMenu/NavLink/NavLink.module.css
+++ b/src/components/header/MobileMenu/NavLink/NavLink.module.css
@@ -8,7 +8,7 @@
 .icon {
   width: 32px;
   height: 32px;
-  fill: var(--tv-color);
+  fill: var(--accent-color);
 }
 
 @media screen and (min-width: 768px) {
