--- a/src/components/header/NavMenu/LinkHeader/LinkHeader.module.css
+++ b/src/components/header/NavMenu/LinkHeader/LinkHeader.module.css
@@ -3,7 +3,9 @@
   font-weight: 600;
   border-radius: 36px;
   background: #ffffff;
-  box-shadow: -7px 7px 41px #bdbdbd, 7px -7px 41px #ffffff;
+  -webkit-box-shadow: 0px 4px 5px 0px rgba(41, 117, 98, 1);
+  -moz-box-shadow: 0px 4px 5px 0px rgba(41, 117, 98, 1);
+  box-shadow: 0px 4px 5px 0px rgba(41, 117, 98, 1);
   padding: 8px 18px;
   transition: var(--hover-effect);
 }
