--- a/src/components/homepage/hero/Hero.module.css
+++ b/src/components/homepage/hero/Hero.module.css
@@ -1,46 +1,25 @@
 .heroContainer {
   max-width: 375px;
-  margin: 20px 0;
 }
 
 .hero {
   position: relative;
-  background: linear-gradient(
-    0deg,
-    rgba(13, 68, 15, 1) 0%,
-    rgba(29, 171, 69, 1) 100%
-  );
-  padding: 40px 20px;
-  border-radius: 10px;
-  -webkit-box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.75);
-  border: 2px solid var(--tv-color);
-  animation: appearUp 1.2s ease;
+  background-color: transparent;
+  padding: 20px;
 }
 
 .hero h1 {
   color: var(--white-color);
   text-align: center;
-  font-size: 28px;
+  font-size: 22px;
+  font-weight: 600;
+  animation: appearUp 1s ease;
 }
 
-.accent {
-  font-size: 18px;
-}
-
-.accent strong {
-  color: var(--television-color);
-}
-
-@media screen and (min-width: 375px) {
-  .hero {
-    padding: 60px 20px;
-  }
-
-  .accent {
-    font-size: 22px;
-  }
+.hero p {
+  text-align: center;
+  margin-top: 8px;
+  animation: appearUp 1.8s ease;
 }
 
 @media screen and (min-width: 768px) {
@@ -52,8 +31,8 @@
     font-size: 54px;
   }
 
-  .accent {
-    font-size: 38px;
+  .hero p {
+    font-size: 24px;
   }
 }
 
@@ -76,10 +55,6 @@
 
   .hero h1 {
     font-size: 72px;
-  }
-
-  .accent {
-    font-size: 52px;
   }
 
   .imageTV,
