--- a/src/components/radio/Descripcion/Descripcion.module.css
+++ b/src/components/radio/Descripcion/Descripcion.module.css
@@ -1,4 +1,11 @@
 .container {
+  background-color: var(--dark-blue);
+  padding: 20px 0;
+  margin-top: 20px;
+}
+
+.content {
+  width: 90%;
   max-width: 375px;
   margin: 0 auto;
 }
@@ -19,10 +26,6 @@
   max-height: 34px;
 }
 
-.accent {
-  color: var(--radio-red);
-}
-
 .box {
   display: flex;
   align-items: center;
@@ -31,15 +34,14 @@
 }
 
 .showMoreBtn {
-  color: var(--radio-red);
+  color: var(--white-color);
   padding: 0.7em 1.7em;
   font-size: 18px;
   border-radius: 0.5em;
-  background: #e8e8e8;
+  background: var(--accent-color);
   cursor: pointer;
   border: 1px solid #e8e8e8;
   transition: all 0.3s;
-  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
   font-weight: 600;
   animation: appearDown 1.4s ease;
 }
@@ -65,7 +67,7 @@
 }
 
 @media screen and (min-width: 768px){
-  .container {
+  .content {
     max-width: 768px;
   }
 
@@ -88,7 +90,7 @@
 }
 
 @media screen and (min-width: 1200px){
-  .container {
+  .content {
     max-width: 410px;
   }
 
