--- a/src/components/radio/DesktopImg/DesktopImg.module.css
+++ b/src/components/radio/DesktopImg/DesktopImg.module.css
@@ -10,6 +10,7 @@
     width: 350px;
     height: 160px;
     overflow: hidden;
+    margin-top: 20px;
     border: 2px solid var(--radio-red);
     border-radius: 75px;
     background: #e0e0e0;
