--- a/src/components/television/AboutTV/CardInfo/CardInfo.module.css
+++ b/src/components/television/AboutTV/CardInfo/CardInfo.module.css
@@ -14,10 +14,10 @@
 }
 
 .activeCard {
-  border: 2px solid var(--tv-color);
-  -webkit-box-shadow: 0px 2px 8px 0px rgba(122, 83, 4, 1);
-  -moz-box-shadow: 0px 2px 8px 0px rgba(122, 83, 4, 1);
-  box-shadow: 0px 2px 8px 0px rgba(122, 83, 4, 1);
+  border: 2px solid var(--accent-color);
+  -webkit-box-shadow: 0px 2px 8px 0px rgb(34, 109, 119);
+  -moz-box-shadow: 0px 2px 8px 0px rgb(34, 109, 119);
+  box-shadow: 0px 2px 8px 0px rgb(34, 109, 119);
 }
 
 .activeCard .imageWrapper::after {
