--- a/src/components/television/ButtonsYoutube/ButtonsYoutube.module.css
+++ b/src/components/television/ButtonsYoutube/ButtonsYoutube.module.css
@@ -48,10 +48,10 @@
 }
 
 .cardContainerActive {
-  border: 2px solid var(--tv-color);
-  -webkit-box-shadow: 0px 2px 8px 0px rgba(122, 83, 4, 1);
-  -moz-box-shadow: 0px 2px 8px 0px rgba(122, 83, 4, 1);
-  box-shadow: 0px 2px 8px 0px rgba(122, 83, 4, 1);
+  border: 2px solid var(--accent-color);
+  -webkit-box-shadow: 0px 2px 8px 0px rgb(19, 109, 121);
+  -moz-box-shadow: 0px 2px 8px 0px rgb(14, 95, 109);
+  box-shadow: 0px 2px 8px 0px rgb(50, 124, 143);
 }
 
 .cardContainerActive .imageWrapper::after {
