--- a/src/components/television/SolidariaTV/SolidariaTV.module.css
+++ b/src/components/television/SolidariaTV/SolidariaTV.module.css
@@ -1,11 +1,14 @@
 .videosContainer {
     margin-top: 12px;
     text-align: center;
+    max-width: 375px;
+    width: 100%;
+    margin: 40px auto;
   }
 
   .link {
     display: inline-block;
-    background-color: var(--tv-color);
+    background-color: var(--accent-color);
     padding: 6px 12px;
     margin-top: 12px;
     border-radius: 20px;
@@ -16,11 +19,7 @@
   
   .link:hover {
     background-color: var(--white-color);
-    color: var(--tv-color);
-  }
-  
-  .swiper-button-prev, .swiper-button-next {
-      color: var(--tv-color);
+    color: var(--accent-color);
   }
 
   .videoContainer {
@@ -38,16 +37,17 @@
       align-items: center;
       flex-wrap: wrap;
       gap: 20px;
-      margin-top: 20px;
+      margin-top: 40px;
+      max-width: 768px;
     }
 
     .link {
       margin-top: 0;
       background-color: var(--white-color);
-      color: var(--tv-color);
+      color: var(--accent-color);
       width: 338px;
       height: 198px;
-      border: 1px solid var(--tv-color);
+      border: 1px solid var(--accent-color);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -56,7 +56,13 @@
     }
   
     .link:hover {
-      background-color: var(--tv-color);
+      background-color: var(--accent-color);
       color: var(--white-color);
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    .videosContainer {
+      max-width: 1200px;
     }
   }
