--- a/src/components/footer/Copyright/Copyright.module.css
+++ b/src/components/footer/Copyright/Copyright.module.css
@@ -20,7 +20,7 @@
 }
 
 .linksBox a:hover {
-    color: var(--tv-color);
+    color: var(--accent-color);
 }
 
 @media screen and (min-width: 768px) {
