--- a/src/components/aboutPage/socials/Socials.module.css
+++ b/src/components/aboutPage/socials/Socials.module.css
@@ -20,7 +20,7 @@
   border-radius: 23px;
   background: var(--dark-blue);
   box-shadow: 5px 5px 6px #2b8b92, -5px -5px 6px #3e8f8b;
-  border: 1px solid var(--tv-color);
+  border: 1px solid var(--accent-color);
   width: 100%;
   height: 80px;
   padding: 10px;
@@ -65,8 +65,8 @@
 
 @media screen and (min-width: 1200px) {
   .card:hover {
-    -webkit-box-shadow: 0px 2px 11px 3px rgba(52, 138, 23, 1);
-    -moz-box-shadow: 0px 2px 11px 3px rgba(52, 138, 23, 1);
-    box-shadow: 0px 2px 11px 3px rgba(52, 138, 23, 1);
+    -webkit-box-shadow: 0px 2px 11px 3px var(--white-color);
+    -moz-box-shadow: 0px 2px 11px 3px var(--white-color);
+    box-shadow: 0px 2px 11px 3px var(--white-color);
   }
 }
