--- a/src/components/homepage/Description/Description.module.css
+++ b/src/components/homepage/Description/Description.module.css
@@ -40,11 +40,18 @@
 @media screen and (min-width: 1200px) {
     .container {
         flex-direction: column;
-        width: 402px;
+        width: 84%;
+        padding: 40px 0;
+        margin: 40px auto;
     }
 
     .desc {
         width: 100%;
+    }
+
+    .title {
+        font-size: 28px;
+        margin-bottom: 10px;
     }
 }
 
