--- a/src/components/homepage/LinksPages/LinksPages.module.css
+++ b/src/components/homepage/LinksPages/LinksPages.module.css
@@ -18,12 +18,14 @@
   -webkit-box-shadow: 1px -2px 6px 2px rgba(43, 138, 119, 1);
   -moz-box-shadow: 1px -2px 6px 2px rgba(43, 138, 119, 1);
   box-shadow: 1px -2px 6px 2px rgba(43, 138, 119, 1);
+  animation: appearLeft 1.6s ease;
 }
 
 .linkItem:last-of-type {
   -webkit-box-shadow: 1px 2px 6px 2px rgba(43, 138, 119, 1);
   -moz-box-shadow: 1px 2px 6px 2px rgba(43, 138, 119, 1);
   box-shadow: 1px 2px 6px 2px rgba(43, 138, 119, 1);
+  animation: appearRight 1.6s ease;
 }
 
 .linkItem a {
@@ -36,23 +38,17 @@
   column-gap: 10px;
 }
 
-.linkBoxRadio {
-  animation: appearLeftRotate 1s ease;
-}
-
-.linkBoxTV {
-  animation: appearRightRotate 1s ease;
-}
-
 .title {
   color: var(--white-color);
   font-size: 14px;
   font-weight: 600;
+  animation: appearDown 2s ease;
 }
 
 .text {
   font-size: 14px;
   font-weight: 400;
+  animation: appearDown 2s ease;
 }
 
 .linkItem {
@@ -69,22 +65,62 @@
     z-index: 10;
   }
 
+  .linkItem {
+    height: 100px;
+  }
+
   .text,
   .title {
     font-size: 20px;
+  }
+
+  .imageTv,
+  .imageRadio {
+    width: 100px;
+    height: 80px;
+  }
+
+  .linkItem a {
+    padding-left: 20%;
+    column-gap: 20px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .container {
-    width: 660px;
+    width: 1000px;
+    margin: 0 auto;
+    row-gap: 20px;
+  }
+
+  .linkItem {
+    height: 150px;
+  }
+
+  .imageTv,
+  .imageRadio {
+    width: 160px;
+    height: 130px;
+  }
+
+  .text,
+  .title {
+    font-size: 30px;
+  }
+
+  .linkItem a {
+    transition: var(--hover-effect);
+  }
+
+  .linkItem a:hover {
+    background: var(--dark-blue);
   }
 }
 
 @keyframes appearLeft {
   0% {
     opacity: 0;
-    transform: translateX(-100px);
+    transform: translateX(-200px);
   }
   100% {
     opacity: 1;
@@ -95,7 +131,7 @@
 @keyframes appearRight {
   0% {
     opacity: 0;
-    transform: translateX(100px);
+    transform: translateX(200px);
   }
   100% {
     opacity: 1;
@@ -103,24 +139,23 @@
   }
 }
 
-@keyframes appearLeftRotate {
+@keyframes appearDown {
   0% {
     opacity: 0;
-    transform: translateX(-100px) rotate(-180deg);
+    transform: translateY(200px);
   }
-  100% {
-    opacity: 1;
-    transform: translateX(0) rotate(0);
+  50% {
+    opacity: 0;
+    transform: translateY(100px);
   }
-}
 
-@keyframes appearRightRotate {
-  0% {
+  75% {
     opacity: 0;
-    transform: translateX(100px) rotate(180deg);
+    transform: translateY(50px);
   }
+
   100% {
     opacity: 1;
-    transform: translateX(0) rotate(0);
+    transform: translateX(0);
   }
 }
