--- a/src/components/television/VideoButtons/VideoButtons.module.css
+++ b/src/components/television/VideoButtons/VideoButtons.module.css
@@ -33,18 +33,32 @@
   border-radius: 20px;
   font-size: 14px;
   padding: 0 12px;
-  -webkit-box-shadow: -1px 0px 7px 0px rgba(37,196,196,1);
-  -moz-box-shadow: -1px 0px 7px 0px rgba(37,196,196,1);
-  box-shadow: -1px 0px 7px 0px rgba(37,196,196,1);
+  -webkit-box-shadow: -1px 0px 7px 0px rgba(37, 196, 196, 1);
+  -moz-box-shadow: -1px 0px 7px 0px rgba(37, 196, 196, 1);
+  box-shadow: -1px 0px 7px 0px rgba(37, 196, 196, 1);
   transition: var(--hover-effect);
 }
 
 .videoContainer {
   width: 100%;
+  position: relative;
   height: auto;
   max-width: 375px;
+  max-height: 240px;
   padding: 0 15px;
   margin: 0 auto;
+  animation: appear 1.4s ease;
+}
+
+.wrapperVideo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  width: 100%;
+  height: 100%; 
+  border-radius: 12px;
+  margin-top: 10px;
 }
 
 .video {
@@ -73,6 +87,7 @@
   .videoContainer {
     width: 600px;
     max-width: 100%;
+    max-height: 300px;
   }
 
   .video {
@@ -84,14 +99,15 @@
     background-color: var(--accent-color);
   }
 
-    .activeButton:hover {
-        color: var(--white-color);
-    }
+  .activeButton:hover {
+    color: var(--white-color);
+  }
 }
 
-@media screen and (min-width: 1200px){
+@media screen and (min-width: 1200px) {
   .videoContainer {
     width: 1000px;
+    max-height: 600px;
   }
 
   .video {
@@ -107,5 +123,16 @@
   100% {
     opacity: 1;
     transform: translateX(0);
+  }
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
   }
 }
